tco1279 for 1h regrid

--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -125,6 +125,16 @@ source_grids:
         extra: -setgrid,/work/bb1153/b382075/nextgems/grids/grid_lonlat_025.txt
         cellareas: /work/bb1153/b382075/nextgems/grids/cellarea_unstructured_025.nc
         cellarea_var: cell_area
+      2D_1h_0.25deg:
+        space_coord: ["value"]
+        extra: -setgrid,/work/bb1153/b382075/nextgems/grids/grid_lonlat_025.txt
+        cellareas: /work/bb1153/b382075/nextgems/grids/cellarea_unstructured_025.nc
+        cellarea_var: cell_area
+      3D_1h_0.25deg:
+        space_coord: ["value"]
+        extra: -setgrid,/work/bb1153/b382075/nextgems/grids/grid_lonlat_025.txt
+        cellareas: /work/bb1153/b382075/nextgems/grids/cellarea_unstructured_025.nc
+        cellarea_var: cell_area
   
     tco1279-orca025:
       ICMGG_atm2d:
