--- a/.github/workflows/teleconnections.yaml
+++ b/.github/workflows/teleconnections.yaml
@@ -6,8 +6,6 @@ on:
     paths:
       - 'diagnostics/teleconnections/**'
       - 'tests/teleconnections/**'
-    types: 
-      - labeled
   workflow_dispatch:
   schedule:
     - cron: "0 3 * * 1" # Run every Monday night at 3AM UTC
@@ -17,7 +15,7 @@ permissions:
 
 jobs:
   teleconnections_test:
-    if: contains(github.event.pull_request.labels.*.name, 'Ready to merge') || contains(github.event.label.name, 'Ready to merge')
+    if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
     runs-on: ubuntu-latest
     permissions:
       contents: read
