--- a/.github/workflows/aqua-pip.yml
+++ b/.github/workflows/aqua-pip.yml
@@ -70,7 +70,7 @@ jobs:
           
           # FDB for GSV
           rm -rf /app/
-          cp -r ./fdb/ /app/
+          cp -r ./AQUA_tests/fdb/ /app/
           mkdir -pv /app/localroot/
           cd /app/
           fdb-write sample_test_data.grib
