--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,7 +100,8 @@ markers = [
     "slow: tests which are slow",
     "sbatch: tests which require sbatch",
     "dummy: mark test for dummy diagnostic",
-    "teleconnections: mark test for teleconnections diagnostic"
+    "teleconnections: mark test for teleconnections diagnostic",
+    "tropical_rainfall: mark test for tropical_rainfall diagnostic"
 ]
 
 # This appears to be the correct configuration, but for some reason
