--- a/config/fixes/default.yaml
+++ b/config/fixes/default.yaml
@@ -18,6 +18,7 @@ defaults:
             'mm 3h-1': 'mm/(3h)'
             'm of water equivalent': 'm'
             'm of water': 'm'
+            'C':  'degC'
 
 
     
