further razionalization and logging

--- a/config/fixes/FESOM.yaml
+++ b/config/fixes/FESOM.yaml
@@ -10,22 +10,22 @@ models:
                     - ssh
                 vars:
                     ci:
-                        derived: a_ice
+                        source: a_ice
                         src_units: frac
                         grib: true
                         units: '%'
                     sst: 
-                        derived: sst
+                        source: sst
                         grib: true
                     sos:
-                        derived: sss
+                        source: sss
                         grib: true
                         units: psu
                     sithick:
-                        derived: m_ice
+                        source: m_ice
                         grib: true
                     zos:
-                        derived: ssh
+                        source: ssh
                         grib: true
                     ocpt:
                         source: temp 
