renaming config aqua

--- a/config/config-aqua.yaml
+++ b/config/config-aqua.yaml
@@ -1,6 +1,6 @@
 # machine dependent configuration file for AQUA
 # so far nothing is really strict
-machine: levante
+machine: ci
 
 reader: 
   catalog: '{configdir}/machines/{machine}/catalog.yaml'
