--- a/config/machines/lumi/catalog/IFS/fdb-tco399.yaml
+++ b/config/machines/lumi/catalog/IFS/fdb-tco399.yaml
@@ -2,11 +2,20 @@ sources:
   fdb-long:
     args:
       request:
-        levtype: "sfc"
+        domain: g
+        class: rd
+        expver: hz9n
+        type: fc
+        stream: lwda
+        anoffset: 9
         date: 20200120
-        time: 0000/to/2300/by/0100
-        step: "0"
+        time: 0000
+        # time: 0000/to/2300/by/0100
         param: 2t
-      step: 'D'
+        step: 0/to/35064
+      timestyle: step
+      aggregation: D
+      timestep: 1h
     description: 'FDB data tco399 grid'
     driver: gsv
+
