--- a/config/machines/lumi/catalog/ERA5/fdb.yaml
+++ b/config/machines/lumi/catalog/ERA5/fdb.yaml
@@ -3,11 +3,15 @@ sources:
         args:
             request:
                 levtype: "sfc"
-                date: 20050401
-                time: 0000/to/2300/by/0100
-                step: "0"
-                param: [2t, tp]
-            step: 'D'
+                date: 20200120
+                time: 0000
+                step: 0
+                param: "2t"
+            start_date: 20200120
+            end_date: 20250101
+            aggregation: '6H'
+            timestyle: "date"
+            timestep: 3600
         description: 'Test FDB data'
         driver: gsv
         #metadata: {step: 'M'}
