--- a/config/machines/lumi/catalog/ERA5/fdb.yaml
+++ b/config/machines/lumi/catalog/ERA5/fdb.yaml
@@ -2,16 +2,16 @@ sources:
     fdb-test:
         args:
             request:
-                levtype: "sfc"
+                levtype: sfc
                 date: 20200120
                 time: 0000
                 step: 0
-                param: "tcc"
+                param: tcc
             start_date: 20200120
             end_date: 20250101
-            aggregation: 'S'
-            timestep: "H"
-            timestyle: "date"
+            aggregation: S
+            timestep: H
+            timestyle: date
         description: 'Test FDB data'
         driver: gsv
         metadata: {fdb_path: /data/users/jost/fdb/fdb-test/config.yaml}
