--- a/config/machines/lumi/catalog/IFS/fdb-tco399.yaml
+++ b/config/machines/lumi/catalog/IFS/fdb-tco399.yaml
@@ -10,12 +10,14 @@ sources:
         anoffset: 9
         date: 20200120
         time: 0000
-        # time: 0000/to/2300/by/0100
         param: 2t
+        levtype: sfc
         step: 0/to/35064
+      start_date: 20200120
+      end_date: 20210101
+      aggregation: S
+      timestep: H
       timestyle: step
-      aggregation: D
-      timestep: 1h
     description: 'FDB data tco399 grid'
     driver: gsv
-
+    metadata: {fdb_path: /data/users/jost/fdb/fdb-long-mini/config.yaml}
