--- a/.github/workflows/teleconnections.yaml
+++ b/.github/workflows/teleconnections.yaml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   teleconnections_test:
-    if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
+    #if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
     runs-on: ubuntu-latest
     permissions:
       contents: read
