--- a/config/machines/lumi/catalog/ERA5/fdb.yaml
+++ b/config/machines/lumi/catalog/ERA5/fdb.yaml
@@ -7,8 +7,8 @@ sources:
                 time: 0000
                 step: 0
                 param: tcc
-            start_date: 20200120
-            end_date: 20250101
+            data_start_date: 20200120
+            data_end_date: 20250101
             aggregation: S
             timestep: H
             timestyle: date
