--- a/config/machines/lumi/catalog/IFS/fdb-tco399.yaml
+++ b/config/machines/lumi/catalog/IFS/fdb-tco399.yaml
@@ -13,8 +13,8 @@ sources:
         param: 2t
         levtype: sfc
         step: 0/to/35064
-      start_date: 20200120
-      end_date: 20210101
+      data_start_date: 20200120
+      data_end_date: 20210101
       aggregation: S
       timestep: H
       timestyle: step
