--- a/config/machines/ci/catalog/IFS/test-tco79.yaml
+++ b/config/machines/ci/catalog/IFS/test-tco79.yaml
@@ -27,4 +27,12 @@ sources:
       query:
         experiment: historical
         frequency: hourly
+  nao:
+    args:
+      chunks:
+        time: 1
+      urlpath:
+      - ./AQUA_tests/models/IFS/nao/nao_test.nc
+    description: msl for NAO
+    driver: netcdf
 
