added mafalda example

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,3 +10,4 @@ reader:
 cdo:
   levante: /home/m/m214003/local/bin/cdo # CDO 2.2.0 by Uwe Schulzweida (HEALPix support)
   lumi: /users/jvonhar/mambaforge/aqua/bin/cdo
+  mafalda: /home/jost/miniconda3/envs/aqua/bin/cdo
