teleconnections is the IFS entry for ci test

--- a/config/machines/ci/regrid.yaml
+++ b/config/machines/ci/regrid.yaml
@@ -48,7 +48,7 @@ source_grids:
         space_coord: [lon, lat]
       intake-esm-test:
         space_coord: [lon, lat]
-      nao:
+      teleconnections:
         space_coord: [lon, lat]
 
   ICON:
