--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -49,14 +49,13 @@ source_grids:
         space_coord: ["rgrid"]
     fdb-tco399:
       default:
-        # path:
-        #   2d: /projappl/project_465000454/jvonhar/aqua/grids/cellarea_lonlat_1440x720.nc
-        #   2dm: /projappl/project_465000454/jvonhar/aqua/grids/cellarea_lonlat_1440x720_masked.nc
-        masked_vars:
-          - ci
-          - sst
-        space_coord: ["lon", "lat"]
-        vert_coord: ["2d", "2dm"]
+        path: /work/users/jost/aqua/grids/tco399_grid.nc
+        #  2d: /work/users/jost/aqua/grids/cellarea_lonlat_1440x720.nc
+        #  2dm: /work/users/jost/aqua/grids/cellarea_lonlat_1440x720_masked.nc
+        # masked_vars:
+        #  - ci
+        #  - sst
+        space_coord: ["ncells"]
   ERA5:
     fdb:
       default:
