--- a/config/machines/mafalda/catalog/IFS/fdb-tco399.yaml
+++ b/config/machines/mafalda/catalog/IFS/fdb-tco399.yaml
@@ -10,7 +10,7 @@ sources:
         anoffset: 9
         date: 20200120
         time: 0000
-        param: 2t
+        param: tcc
         levtype: sfc
         step: 0/to/35064
       data_start_date: 20200120
