--- a/config/machines/mafalda/regrid.yaml
+++ b/config/machines/mafalda/regrid.yaml
@@ -23,50 +23,17 @@ target_grids:
 
 # extra is an extra special cdo command to be applied before generating the weights
 source_grids:
-  FESOM:
-    test-pi:
-      original_2d:
-        path: ../AQUA_tests_short/grids/pi_griddes_nodes_IFS.nc
-        space_coord: ["nod2"]
-        extra: 
-          - -setgrid,../AQUA_tests_short/grids/pi_griddes_nodes_IFS.nc 
-          - -selname,cell_area 
   IFS:
-    tco399-orca025:
-      default:
-        path: /pfs/lustrep3/projappl/project_465000454/padavini/aqua/grids/tco399_grid.nc
-        space_coord: ["value"]
-    tco79-eORCA1:
-      atm2d:
-        path: /pfs/lustrep3/scratch/project_465000454/AQUA-workflow/tco_grids/tco79_grid.nc
-        space_coord: ["value"]
-      atm3d:
-        path: /pfs/lustrep3/scratch/project_465000454/AQUA-workflow/tco_grids/tco79_grid.nc
-        space_coord: ["value"]
-    test-tco79:
-      original_2d:
-        path: ../AQUA_tests_short/grids/tco79_grid.nc
-        space_coord: ["rgrid"]
     fdb-tco399:
       default:
-        path:
-          2d: /work/users/jost/aqua/grids/cellarea_lonlat_1440x720.nc
-          2dm: /work/users/jost/aqua/grids/cellarea_lonlat_1440x720_masked.nc
-        masked_vars:
-          - ci
-          - sst
-        space_coord: ["lon", "lat"]
-        vert_coord: ["2d", "2dm"]
+        path: /work/users/jost/aqua/grids/tco399_grid.nc
+        #  2d: /work/users/jost/aqua/grids/cellarea_lonlat_1440x720.nc
+        #  2dm: /work/users/jost/aqua/grids/cellarea_lonlat_1440x720_masked.nc
+        # masked_vars:
+        #  - ci
+        #  - sst
+        space_coord: ["ncells"]
   ERA5:
     fdb:
       default:
         space_coord: ["lon", "lat"]
-  NEMO:
-    tco79-eORCA1:
-      default:
-        path: /pfs/lustrep3/projappl/project_465000454/padavini/aqua/grids/ORCA1_mesh_sfc_grid_T.nc
-        space_coord: ["cell"]
-        # path: /pfs/lustrep3/scratch/project_465000454/pool/data/IFS/inputs_de_48r1/nemo/V40/eORCA1_Z75/common/mesh_mask.nc
-        # extra:
-        #   - selname,tmask          
-        # space_coord: ["nav_lon", "nav_lat"]
