--- a/config/machines/mafalda/regrid.yaml
+++ b/config/machines/mafalda/regrid.yaml
@@ -26,13 +26,14 @@ source_grids:
   IFS:
     fdb-tco399:
       default:
-        path: /work/users/jost/aqua/grids/tco399_grid.nc
-        #  2d: /work/users/jost/aqua/grids/cellarea_lonlat_1440x720.nc
-        #  2dm: /work/users/jost/aqua/grids/cellarea_lonlat_1440x720_masked.nc
-        # masked_vars:
-        #  - ci
-        #  - sst
+        path: 
+          2d: /work/users/jost/aqua/grids/tco399_grid.nc
+          2dm: /work/users/jost/aqua/grids/tco399_grid_masked.nc
+        masked_vars:
+          - ci
+          - sst
         space_coord: ["ncells"]
+        vert_coord: ["2d", "2dm"]  # If the case is more complex than simply "2d" we need to specify this  
   ERA5:
     fdb:
       default:
