fixed gsv tests

--- a/config/machines/ci/catalog/IFS/main.yaml
+++ b/config/machines/ci/catalog/IFS/main.yaml
@@ -4,3 +4,8 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/test-tco79.yaml"
+  test-fdb:
+    description: Test FDB archive
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/test-fdb.yaml"
