--- a/config/machines/lumi/catalog/IFS/main.yaml
+++ b/config/machines/lumi/catalog/IFS/main.yaml
@@ -14,3 +14,8 @@ sources:
     driver: yaml_file_cat
     args:
       path: '{{CATALOG_DIR}}/fdb-tco399.yaml'
+  fdb-control-1950:
+    description: fdb IFS/NEMO control run
+    driver: yaml_file_cat
+    args:
+      path: '{{CATALOG_DIR}}/fdb-control-1950.yaml'
