--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -90,9 +90,11 @@ jobs:
           # FDB for GSV
           rm -rf /app/
           cp -r ./AQUA_tests/fdb/ /app/
+          cat /app/config.yaml
           mkdir -pv /app/localroot/
           cd /app/
           fdb-write sample_test_data.grib
+          ls -l /app/localroot
           # The fdb-list command is a good smoke test.
           fdb-list class=ea,expver=0001
           # But the fdb-read using a request is more like what pyfdb does.
