--- a/config/machines/ci/catalog/IFS/test-fdb.yaml
+++ b/config/machines/ci/catalog/IFS/test-fdb.yaml
@@ -20,4 +20,4 @@ sources:
       timestyle: date
     description: test FDB archive
     driver: gsv
-    metadata: {fdb_path: /scratch/jost/app/config.yaml}
+    metadata: {fdb_path: /app/config.yaml}
