--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -68,7 +68,16 @@ source_grids:
     fdb:
       default:
         space_coord: ["lon", "lat"]
-  
+    era5:
+      default:
+        path: 
+          2d: /pfs/lustrep3/projappl/project_465000454/padavini/ERA5/grids/r025_grid.nc
+          2dm: /pfs/lustrep3/projappl/project_465000454/padavini/ERA5/grids/r025_grid_masked.nc
+        masked_vars:
+          - sst
+          - SSTK
+        space_coord: ["lon", "lat"]
+        vert_coord: ["2d", "2dm"]  # If the case is more complex than simply "2d" we need to specify this  
   NEMO:
     tco79-eORCA1:
       default:
