--- a/config/machines/levante/catalog/IFS/tco3999-ng5.yaml
+++ b/config/machines/levante/catalog/IFS/tco3999-ng5.yaml
@@ -9,19 +9,22 @@ sources:
     description: original 2d output
     args:
       consolidated: False
-      urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMGGc2/json.dir/atm2d.json
+      #urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMGGc2/json.dir/atm2d.json
+      urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm2d.json
   ICMU_atm2d:
     driver: zarr
     description: original 2d output (lnsp)
     args:
       consolidated: False
-      urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMUAc2/json.dir/atm2d.json
+      #urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMUAc2/json.dir/atm2d.json
+      urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm2d.json
   ICMU_atm3d:
     driver: zarr
     description: original 3d output
     args:
       consolidated: False
-      urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMUAc2/json.dir/atm3d.json
+      #urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMUAc2/json.dir/atm3d.json
+      urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm3d.json
   interpolated_global:
     driver: zarr
     description: NN interpolation to 5400x2700 grid (lon=[-180,180], lat=[-90, 90])
@@ -29,6 +32,12 @@ sources:
       consolidated: False
       compat: override
       combine: nested
+      #urlpath: 
+      #- reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2t/netcdf/tco3999-ng5_pc.json
+      #- reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2d/netcdf/tco3999-ng5_pc.json
+      #- reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_pc.json
+      #- reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_pc.json
+      #- reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_pc.json
       urlpath: 
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2t/netcdf/tco3999-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2d/netcdf/tco3999-ng5_pc.json
@@ -76,8 +85,3 @@ sources:
   #     combine: nested
   #     urlpath: 
   #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/ci/netcdf/tco3999-ng5_sp.json
-  # lra-r100-day:
-  #   driver: netcdf
-  #   args:
-  #     urlpath: '/work/bb1153/b382076/LRA/tco3999-ng5/r100/day/*.nc'
-  #     chunks: {}
