--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -63,6 +63,9 @@ source_grids:
         space_coord: ["lon", "lat"]
       monthly-1deg:
         space_coord: ["lon", "lat"]
+    fdb-historical-1990:
+      default:
+        space_coord: ["ncells"]
 
   ERA5:
     fdb:
