--- a/config/machines/lumi/catalog/IFS/fdb-control-1950.yaml
+++ b/config/machines/lumi/catalog/IFS/fdb-control-1950.yaml
@@ -73,7 +73,7 @@ sources:
         stream: monr
         date: 19500101
         time: "0000"
-        param: 144
+        param: sd
         levtype: sfc
         step: 744
       data_start_date: 19500101
