--- a/config/machines/lumi/catalog/IFS/fdb-control-1950.yaml
+++ b/config/machines/lumi/catalog/IFS/fdb-control-1950.yaml
@@ -63,7 +63,7 @@ sources:
     description: 'FDB IFS/NEMO control run 6hourly data 1deg'
     driver: gsv
     metadata: {fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
-  monthly-1deg:
+  monthly-1deg-2d:
     args:
       request:
         domain: g
@@ -84,3 +84,26 @@ sources:
     description: 'FDB IFS/NEMO control run monthly data 1deg'
     driver: gsv
     metadata: {fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
+  monthly-1deg-3d:
+    args:
+      request:
+        domain: g
+        class: rd
+        expver: a06x
+        type: fc
+        stream: monr
+        date: 19500101
+        time: "0000"
+        param: t
+        levtype: pl
+        levelist: [1,5,10,20,30,50,70,100,150,200,250,300,400,500,600,700,850,925,1000]
+        step: 744
+      data_start_date: 19500101
+      data_end_date: 19600101
+      aggregation: M  # Default aggregation if timestep=S is used
+      timestep: H
+      timestyle: step
+    description: 'FDB IFS/NEMO control run monthly data 1deg'
+    driver: gsv
+    metadata: {fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
+    
