--- a/config/machines/lumi/catalog/IFS/fdb-historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS/fdb-historical-1990.yaml
@@ -4,7 +4,7 @@ sources:
       request:
         domain: g
         class: rd
-        expver: a06x
+        expver: a07p
         type: fc
         stream: lwda
         date: 19900101
@@ -25,7 +25,7 @@ sources:
       request:
         domain: g
         class: rd
-        expver: a06x
+        expver: a07p
         type: fc
         stream: scda
         date: 19900101
@@ -46,7 +46,7 @@ sources:
       request:
         domain: g
         class: rd
-        expver: a06x
+        expver: a07p
         type: fc
         stream: scwv
         date: 19900101
@@ -58,29 +58,51 @@ sources:
       data_start_date: 19900101
       data_end_date: 20200101
       aggregation: 6H  # Default aggregation if timestep=S is used
-      timestep: 6H
+      timestep: H  # What one step means
       timestyle: step
     description: 'FDB IFS/NEMO historical run 6hourly data 1deg'
     driver: gsv
     metadata: {fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
-  monthly-1deg:
+  monthly-1deg-2d:
     args:
       request:
         domain: g
         class: rd
-        expver: a06x
+        expver: a07p
         type: fc
         stream: monr
         date: 19900101
         time: "0000"
-        param: 167
+        param: sd
         levtype: sfc
         step: 744
       data_start_date: 19900101
       data_end_date: 20200101
-      aggregation: S
-      timestep: M
+      aggregation: M  # Default aggregation if timestep=S is used
+      timestep: H
       timestyle: step
     description: 'FDB IFS/NEMO historical run monthly data 1deg'
+    driver: gsv
+    metadata: {fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+  monthly-1deg-3d:
+    args:
+      request:
+        domain: g
+        class: rd
+        expver: a07p
+        type: fc
+        stream: monr
+        date: 19900101
+        time: "0000"
+        param: t
+        levtype: pl
+        levelist: [1,5,10,20,30,50,70,100,150,200,250,300,400,500,600,700,850,925,1000]
+        step: 744
+      data_start_date: 19900101
+      data_end_date: 20200101
+      aggregation: M  # Default aggregation if timestep=S is used
+      timestep: H
+      timestyle: step
+    description: 'FDB IFS/NEMO control run monthly data 1deg'
     driver: gsv
     metadata: {fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
