--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -536,10 +536,98 @@ models:
                         source: nsss
                         grib: true
                         decumulate: true
+            monthly-1deg-2d:
+                data_model: ifs
+                vars:
+                    tprate:
+                        source: 260048
+                    lcc:
+                        source: 186
+                    mcc:
+                        source: 187
+                    hcc:
+                        source: 188
+
 
         fdb-historical-1990:
             default:
                 data_model: ifs
+            hourly-1deg:
+                data_model: ifs
+                deltat: 3600
+                jump: month
+                vars:
+                    tprate:
+                        source: 260048
+                    cprate:
+                        source: cp
+                        grib: true
+                        decumulate: true
+                        src_units: m
+                        units: kg m**-2 s**-1
+                    erate:
+                        source: e
+                        grib: true
+                        decumulate: true
+                        src_units: m
+                        units: kg m**-2 s**-1
+                    mtsfr:
+                        source: sf
+                        grib: true
+                        decumulate: true
+                        src_units: m
+                        units: kg m**-2 s**-1
+                    mslhfl:
+                        source: slhf
+                        grib: true
+                        decumulate: true
+                    msshfl:
+                        source: sshf
+                        grib: true
+                        decumulate: true
+                    msnsrf:
+                        source: ssr
+                        grib: true
+                        decumulate: true
+                    msdsrf:
+                        source: ssrd
+                        grib: true
+                        decumulate: true    
+                    msntrf:
+                        source: str
+                        grib: true
+                        decumulate: true
+                    msdtrf:
+                        source: strd
+                        grib: true
+                        decumulate: true
+                    mtnsrf:
+                        source: tsr
+                        grib: true
+                        decumulate: true
+                    mtntrf:
+                        source: ttr
+                        grib: true
+                        decumulate: true    
+                    iews:
+                        source: ewss
+                        grib: true
+                        decumulate: true  
+                    inss: 
+                        source: nsss
+                        grib: true
+                        decumulate: true
+            monthly-1deg-2d:
+                data_model: ifs
+                vars:
+                    tprate:
+                        source: 260048
+                    lcc:
+                        source: 186
+                    mcc:
+                        source: 187
+                    hcc:
+                        source: 188
 
         # These are for tests
         test-tco79:
